    when in a subdirectory of the repository. This affected git annex view.
  * Fix crash when entering/changing view in a subdirectory of a repo that
    has a dotfile in its root.
  * enableremote: Can now be used to explicitly enable git-annex to use
    git remotes. Using the command this way prevents other git-annex
    commands from probing new git remotes to auto-enable them.
  * Support building with ghc 8.0.1.
  * Pass the various gnupg-options configs to gpg in several cases where
    they were not before. Most notably, gnupg-decrypt-options is now
    passed when decrypting an encrypted cipher.
  * Updated cabal file explictly lists source files. The tarball
    on hackage will include only the files needed for cabal install;
    it is NOT the full git-annex source tree.
  * debian/changelog, debian/NEWS, debian/copyright: Converted to symlinks
    to CHANGELOG, NEWS, and COPYRIGHT, which used to symlink to these instead.

 -- Joey Hess <id@joeyh.name>  Wed, 11 May 2016 16:08:38 -0400

git-annex (6.20160511) unstable; urgency=medium

  * Fix bug that sometimes prevented git-annex smudge --clean from consuming
    all its input, which resulted in git add bypassing git-annex.
  * Fix build with directory-1.2.6.2.
  * Improve behavior when a just added http remote is not available
    during uuid probe. Do not mark it as annex-ignore, so it will be tried
    again later.
  * Android: Icon refresh.
    Thanks, freewheelinfranks.
  * Added DIRHASH-LOWER to external special remote protocol.
  * git-annex.cabal: Add Setup-Depends.
  * stack.yaml: Enable explicit-setup-deps.
  * Windows: Fix several bugs in propigation of changes from the adjusted
    branch back to the master branch.
  * Windows: Fix an over-long temp directory name.
  * map: Hide dead repositories that are not connected to the graph.
  * map: Changed colors; red is used for untrusted repositories and grey
    for dead.
  * version: Display OS version and architecture too.